# EmergeciaVehicular_Api

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  firebase-credenciales.json  google-services.json  main.py  pyproject.toml  test_ai.py
alembic/: env.py
alembic/versions/: 0ec18a249a09_agregado_tabla_vehiculo_y_atriuto_url_.py  5b056f944d8f_nombre_de_la_migracion.py  792ab5d9f5c0_crear_tabla_usuarios.py  bcf8d80cb6d5_crear_tabla_usuario.py  bf69ba935185_crear_tabla_taller.py  d68ba367ceda_mejorar_modelo_solicitud_y_cambio_de_.py
app/: main.py
app/config/: auth.py  db.py
app/dependencies/: auth.py  rolCheck.py
app/helpers/: ai.py  cloudinary.py  email.py  firebase_push.py  socket_manager.py
app/models/: asignacion.py  mecanico.py  notificacion.py  pago.py  solicitud.py  taller.py  tipo_servicio.py  usuario.py  vehiculo.py
app/routers/: authRoutes.py  example_router.py  mecanicoRoutes.py  solicitudRoutes.py  tallerRoutes.py  tipoServicioRoutes.py  usuarioRoutes.py  vehiculoRoutes.py  websocketRoutes.py
app/schemas/: auth.py  mecanico.py  solicitud.py  taller.py  tipo_servicio.py  usuario.py  vehiculo.py
app/services/: authServices.py  mecanicoServices.py  solicitudServices.py  tallerServices.py  tipoServicioServices.py  usuarioServices.py  vehiculoServices.py
